[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/textalog/assets/fonts/Silver/godot_fonts/silver_normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://Interactables/Computer/butterfly_login.png" type="Texture" id=2]
[ext_resource path="res://Interactables/Computer/LoginTheme.tres" type="Theme" id=3]
[ext_resource path="res://addons/textalog/assets/fonts/Silver/godot_fonts/silver_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Interactables/Computer/PasswordHint.gd" type="Script" id=5]
[ext_resource path="res://Interactables/Computer/LoginScreen.gd" type="Script" id=6]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.388235, 0.00392157, 0.00392157, 1 )

[node name="Butterly" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -72.0
margin_right = 32.0
margin_bottom = -8.0
texture = ExtResource( 2 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 128.0
margin_top = 105.0
margin_right = 256.0
margin_bottom = 134.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
placeholder_text = "Password"
caret_blink = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -4.5
margin_right = 104.0
margin_bottom = 12.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Welcome! Please enter your password:"

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = 66.5
margin_right = 52.0
margin_bottom = 89.5
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Go!"

[node name="PasswordHint" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = 31.0
margin_right = 114.0
margin_bottom = 51.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.784314, 0.596078, 0.596078, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Forgot your password?"
align = 1
valign = 1
script = ExtResource( 5 )

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="PasswordHint" to="PasswordHint" method="_on_PasswordHint_gui_input"]
[connection signal="mouse_entered" from="PasswordHint" to="PasswordHint" method="_on_PasswordHint_mouse_entered"]
[connection signal="mouse_exited" from="PasswordHint" to="PasswordHint" method="_on_PasswordHint_mouse_exited"]
